[project]
name = "yfinance-mcp-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
  "anyio[trio]>=4.12.1",
  "chainlit>=2.10.0",
  "loguru>=0.7.3",
  "mcp[cli]>=1.26.0",
  "openai-agents",
  "pillow>=12.1.1",
  "python-dotenv>=1.2.2",
  "yfmcp>=0.8.3",
]

[dependency-groups]
dev = [
  "ruff>=0.15.6",
  "ty>=0.0.23",
]
