[project]
name = "yfinance-mcp-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
  "anyio[trio]>=4.13.0",
  "chainlit>=2.11.1",
  "loguru>=0.7.3",
  "mcp[cli]>=1.27.0",
  "openai-agents",
  "pillow>=12.2.0",
  "python-dotenv>=1.2.2",
  "yfmcp>=0.11.0",
]

[dependency-groups]
dev = [
  "ruff>=0.15.12",
  "ty>=0.0.34",
]
